<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="150dp">
<android.support.v7.widget.CardView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="8dp"
    android:elevation="8dp">
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/list_layout">

    <ImageView
        android:id="@+id/imageViewBook"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textColor="#c60a0a"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewBook"
         app:layout_constraintEnd_toStartOf="@+id/publishedDate"
        app:layout_constraintHorizontal_bias="0.139" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c60a"
            android:text="@string/subtittle"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tittle"
            app:layout_constraintStart_toStartOf="@+id/tittle"
            app:layout_constraintEnd_toEndOf="@+id/tittle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="60dp"
            android:layout_height="37dp"
            android:textColor="#cc22a67c"
            android:text="@string/authors"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/publishedDate"
            app:layout_constraintVertical_bias="0.875"
            app:layout_constraintEnd_toEndOf="@+id/publishedDate"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/publishedDate"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.741"
            tools:layout_editor_absoluteX="298dp"
            tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/publishedDate"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="publishedDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />



</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
</RelativeLayout>