<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/smallThumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/title_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smallThumbnail"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/tittle"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/subtitle_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/subtittle"
                android:textColor="#222"
                android:textSize="20dp"
                android:layout_below="@+id/smallThumbnail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="24dp" />





            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/publishedDate_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="publishedDate"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintVertical_bias="0.976"
                app:layout_constraintEnd_toStartOf="@+id/authors_card"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.043" />

                <TextView
                    android:id="@+id/authors_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/authors"
                    android:textColor="#222"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintVertical_bias="1.0" />

            </android.support.constraint.ConstraintLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>